--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
 <head>
 	<title>TicTacToe Game</title>
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Julee" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="custom.css">
 </head>
 <body>
-    <div>
-      <div id="panel"></div>
+    <div id="tictactoe-game">
+			<div id="buttons-bar">
+				<button type="button" name="button" onclick="showPanel()">Panel</button>
+				<button type="button" name="button" onclick="showBoard()">Board</button>
+				<button type="button" name="button" onclick="showAll()">Show All</button>
+			</div>
+      <div id="panel">
+
+      </div>
       <div id="board">
         <div class="internal-shadow">
          <div class="line">
@@ -27,11 +34,11 @@
             <div onclick="makeMove(2,2)" id="box9" value="9" class="box"></div>
          </div>
       </div> <!-- Board -->
-    </div> <!-- Tic Tac Toe Game -->    
-  	
+    </div> <!-- Tic Tac Toe Game -->
+
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="tictactoe.js"></script>
-  </div>    
+  </div>
   <footer>
     <p>by Otavio Augusto © All Rights Reserved. <script>document.write(new Date().getFullYear())</script></p>
   </footer>
