--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>TicTacToe Game</title>
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Julee" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="custom.css">
 </head>
 <body>
@@ -14,7 +15,12 @@
 				<button type="button" name="button" onclick="showAll()">Show All</button>
 			</div>
       <div id="panel">
+				<div id="panel-message">
 
+				</div>
+				<div id="panel-buttons">
+
+				</div>
       </div>
       <div id="board">
         <div class="internal-shadow">
