--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
 </head>
 <body>
     <div id="tictactoe-game">
-			<div id="buttons-bar">
-				<button type="button" name="button" onclick="showPanel()">Panel</button>
-				<button type="button" name="button" onclick="showBoard()">Board</button>
-				<button type="button" name="button" onclick="showAll()">Show All</button>
-			</div>
       <div id="panel">
-				<div id="panel-message">
+				<div class="internal-shadow">
+					<div id="panel-message">
 
-				</div>
-				<div id="panel-buttons">
+					</div>
+					<div id="panel-buttons">
 
+					</div>
 				</div>
       </div>
       <div id="board">
         <div class="internal-shadow">
-         <div class="line">
-            <div onclick="makeMove(0,0)" id="box1" value="1" class="box"></div>
-            <div onclick="makeMove(0,1)" id="box2" value="2" class="box"></div>
-            <div onclick="makeMove(0,2)" id="box3" value="3" class="box"></div>
-         </div>
-         <div class="line">
-            <div onclick="makeMove(1,0)" id="box4" value="4" class="box"></div>
-            <div onclick="makeMove(1,1)" id="box5" value="5" class="box"></div>
-            <div onclick="makeMove(1,2)" id="box6" value="6" class="box"></div>
-         </div>
-         <div class="line">
-            <div onclick="makeMove(2,0)" id="box7" value="7" class="box"></div>
-            <div onclick="makeMove(2,1)" id="box8" value="8" class="box"></div>
-            <div onclick="makeMove(2,2)" id="box9" value="9" class="box"></div>
-         </div>
+					<div style="padding-top: 2.5px;">
+						<div class="line">
+	             <div onclick="makeMove(0,0)" id="box1" value="1" class="box"></div>
+	             <div onclick="makeMove(0,1)" id="box2" value="2" class="box"></div>
+	             <div onclick="makeMove(0,2)" id="box3" value="3" class="box"></div>
+	          </div>
+	          <div class="line">
+	             <div onclick="makeMove(1,0)" id="box4" value="4" class="box"></div>
+	             <div onclick="makeMove(1,1)" id="box5" value="5" class="box"></div>
+	             <div onclick="makeMove(1,2)" id="box6" value="6" class="box"></div>
+	          </div>
+	          <div class="line">
+	             <div onclick="makeMove(2,0)" id="box7" value="7" class="box"></div>
+	             <div onclick="makeMove(2,1)" id="box8" value="8" class="box"></div>
+	             <div onclick="makeMove(2,2)" id="box9" value="9" class="box"></div>
+	          </div>
+					</div>
+			 	</div> <!-- Internal shadow -->
       </div> <!-- Board -->
     </div> <!-- Tic Tac Toe Game -->
 
